--- a/css/master.css
+++ b/css/master.css
@@ -59,9 +59,15 @@ li a {
   position: fixed;
   bottom: 0;
   left: 10%;
+  z-index: -100;
 }
 #desk {
   position: fixed;
   bottom: 0;
   left: 25%;
+  z-index: -100;
+}
+
+#foreground {
+  z-index: -100;
 }
